Remove CoffeeScript. Update manner in which module is referenced when assigning templates.

--- a/package.json
+++ b/package.json
@@ -9,9 +9,5 @@
     "url": "git@github.com:nathanredblur/html-angularjs-brunch.git"
   },
   "main": "./lib/index",
-  "scripts": {
-    "prepublish": "rm -rf lib && coffee --bare --output lib/ src/"
-  },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
